# kwik-cmd

./: .gitignore  LICENSE  README.md  build.sh  commands_config.json  commands_config.json.template  kde_widget.py  metadata.desktop  pyproject.toml
contents/code/: command_executor.js  config_manager.js
contents/ui/: main.qml
src/kwik_cmd/: command_executor.py  kde_widget.py  plasmoid.py
